cluster/apps/media/qbittorrent/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: qBitTorrent
    gethomepage.dev/icon: mdi-cloud-download
    traefik.ingress.kubernetes.io/router.middlewares: "networking-authentik-forwardauth@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
    - host: &host "qbittorrent.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent-qbittorrent
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
